--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,31 +1,31 @@
 .transparent-navbar {
-    background: transparent !important;
+  background: transparent !important;
 }  
 
 .dropdown-menu {
-    background-color: rgba(255, 255, 255, 0.2); /* Adjust the alpha (4th value) for the level of transparency */
-  }
+  background-color: rgba(255, 255, 255, 0.2); /* Adjust the alpha (4th value) for the level of transparency */
+}
 
 /* CSS to add a single separator line between "Hey, Wadap" and "Logout" */
 .dropdown-menu li:first-child::after {
-    content: "";
-    display: block;
-    border-top: 1px solid #ccc; /* Adjust the color and thickness as needed */
-    margin: 5px 0; /* Adjust the margin to control the spacing */
+  content: "";
+  display: block;
+  border-top: 1px solid #ccc; /* Adjust the color and thickness as needed */
+  margin: 5px 15px; /* Adjust the margin to control the spacing */
 }
 
 /* CSS to make "Hey, Wadap" unclickable */
 .dropdown-menu li:first-child a.dropdown-item {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 /* CSS to resize the text in the dropdown menu */
 .dropdown-menu li a.dropdown-item {
-    font-size: 14px; /* Adjust the font size as needed */
+  font-size: 14px; /* Adjust the font size as needed */
 }
 
 .nav-link {
-    color: #FFF;
+  color: #FFF;
 font-family:Poppins;
 font-size: 16px;
 font-style: normal;
@@ -38,11 +38,61 @@ line-height: normal;
     font-family:Poppins;
 }
 
+.logout-icon {
+  width: 1em; /* or adjust the size as needed */
+  height: 1em; /* or adjust the size as needed */
+  vertical-align: middle;
+  filter: brightness(0) invert(1);
+  margin-right: 5px; /* Adjust the margin as needed for the desired spacing */
+}
+.modal-body {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 15px;    
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.whatsapp-link {/* Your desired color */
+  color: white;
+  text-decoration: none; /* Removes the underline */
+}
+
+.bg-glass {
+  background-color: rgba(255, 255, 255, 0.2); /* Adjust the opacity as needed */
+  border-radius: 10px; /* Add border-radius for a rounded effect */
+}
+
+
+/* Remove border from the modal header */
+.modal-header {
+  border: none;
+}
+/* Adjust space between text and buttons in the modal body */
+/* Adjust padding in the modal body */
+.modal-body {
+  padding-bottom: 2rem; /* Increase padding to create space */
+}
+/* Keep the modal at the top */
+.modal-top {
+  margin-top: 10vh; /* Adjust the top margin as needed */
+}
+
+/* Adjust the spacing around buttons */
+.modal-footer button {
+  margin: 0; /* Reset button margins */
+}
+
+.modal-footer .btn-dark {
+  margin-right: 10px; /* Adjust the margin between buttons */
+}
+
 .firstbg {
-    position: relative;
-    height: 100vh;
-    background-color: lightslategray;
-    overflow: hidden;
+  position: relative;
+  height: 100vh;
+  background-color: lightslategray;
+  overflow: hidden;
 }
 .secondbg{
     position: relative;
@@ -82,12 +132,12 @@ line-height: normal;
 }
 
 .firstbg img {
-    position: absolute;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    object-fit: cover;
+  position: absolute;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: cover;
 }
 .secondbg img {
     position: absolute;
@@ -98,27 +148,27 @@ line-height: normal;
     height: 344px;
 }
 .firstcontent {
-    z-index: 1;
+  z-index: 1;
 }
 
 .firstle {
-    color: white;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: Cinzel;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #FFF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: Cinzel;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 .firstpar {
-    color: #FFF;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: Source Sans Pro;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    max-width: 50%;
+  color: #FFF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: Source Sans Pro;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  max-width: 50%;
 }
 .thirdpar{
     margin-top: 50px;
@@ -136,12 +186,12 @@ word-wrap: break-word
 }
 
 .firstbtn {
-    color: #000;
-    font-family: Source Sans Pro;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #000;
+  font-family: Source Sans Pro;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 .secondle {
     color: black;
