--- a/public/css/shipment.css
+++ b/public/css/shipment.css
@@ -44,11 +44,14 @@
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
+  width: 60vh;
   -webkit-transition: margin 0.25s ease-out;
   -moz-transition: margin 0.25s ease-out;
   -o-transition: margin 0.25s ease-out;
   transition: margin 0.25s ease-out;
   background: #1B262C;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 0.7px;
 }
 
 #sidebar-wrapper .sidebar-heading {
@@ -96,7 +99,9 @@
   height: 80vh;
 }
 
-
+.radius {
+  border-radius: 20px !important;
+}
 
 @media (min-width: 768px) {
   #sidebar-wrapper {
