--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -1,11 +1,11 @@
 :root {
-  --main-bg-color: #EFEAD8;
+  --main-bg-color: #fff;
   --main-text-color: #fff;
   --second-text-color: #bbbec5;
   --second-bg-color: #EFEAD8;
 }
-.img-white {
-  filter: brightness(0) invert(1);
+.p-3 .d-flex > div:first-child {
+  margin-right: 10px; /* Sesuaikan margin kanan gambar jika perlu */
 }
 
 
@@ -44,16 +44,23 @@
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
+  width: 60vh;
   -webkit-transition: margin 0.25s ease-out;
   -moz-transition: margin 0.25s ease-out;
   -o-transition: margin 0.25s ease-out;
   transition: margin 0.25s ease-out;
   background: #1B262C;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 0.7px;
 }
 
 #sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
+  padding: 0.800rem 1.25rem;
+  font-size: 1rem;
+  text-align: center;
+  display: flex;
+  margin: 10px 0 0 10px;
+  
 }
 
 #sidebar-wrapper .list-group {
@@ -75,6 +82,10 @@
 .list-group-item {
   border: none;
   padding: 20px 30px;
+
+}
+.list-group-item img {
+  margin-right: 10px;
 }
 
 .list-group-item.active {
@@ -83,9 +94,15 @@
   font-weight: bold;
   border: none;
 }
+
 .table-extend {
   height: 80vh;
 }
+
+.radius {
+  border-radius: 20px !important;
+}
+
 
 @media (min-width: 768px) {
   #sidebar-wrapper {
@@ -100,4 +117,9 @@
   #wrapper.toggled #sidebar-wrapper {
     margin-left: -15rem;
   }
+}
+.table-responsive {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
 }
