--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -138,4 +138,20 @@
   #wrapper.toggled #sidebar-wrapper {
     margin-left: -15rem;
   }
+
+  .white-image {
+    filter: brightness(0) invert(1);
+}
+
+.logout-icon {
+  width: 1em; /* or adjust the size as needed */
+  height: 1em; /* or adjust the size as needed */
+  vertical-align: middle;
+  filter: brightness(0) invert(1);
+  margin-right: 5px; /* Adjust the margin as needed for the desired spacing */
+}
+
+
+
+
 }
