--- a/public/css/style.css
+++ b/public/css/style.css
@@ -564,3 +564,47 @@ word-wrap: break-word
 .footer-right svg {
     fill: white;
 }
+
+.orderfont {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin-top: 8px;
+}
+
+.statusorder {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin-top: 8px;
+}
+
+.buttonfont {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin-top: 10px;   
+}
+
+.btn-whatsapp .whatsapp-link:hover {
+  color: black; /* Change text color to black on hover */
+}
+
+.nowprice {
+  font-family: Poppins;
+  font-style: bold;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+  margin-top: 12px;
+}
